plugins {
    id "java"
}

group = 'net.mcreator.demoplugin'
version = '1.0.0'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

tasks.jar {
    archiveFileName.set("demo-plugin.zip")
}

tasks.register('runMCreatorWithPlugin', JavaExec) {
    dependsOn jar

    environment("MCREATOR_PLUGINS_FOLDER", file("./build/libs"))
    environment("MCREATOR_PLUGINS_DEV", "")

    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

    classpath = project(':MCreator').sourceSets.main.runtimeClasspath

    main = 'net.mcreator.Launcher'

    workingDir = mcreator_path
}